--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/39c7bbdf94.js" crossorigin="anonymous"></script>
   <link
-    href="https://fonts.googleapis.com/css2?family=Onest&family=Phudu:wght@400;700&display=swap"
-    rel="stylesheet"
-  >
+  href="https://fonts.googleapis.com/css2?family=Onest:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Phudu:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  rel="stylesheet"
+/>
 </head>
 <body class="min-h-screen flex flex-col">
   <!-- navbar -->
@@ -27,13 +27,12 @@
                   d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </div>
-        <ul tabindex="0" 
-            class="menu menu-sm dropdown-content 
-                   rounded-box z-10 mt-3 w-52 p-2 shadow bg-base-200">
-          <li class="text-5xl font-bold"><a href="index.html">HOME</a></li>
-          <li class="text-5xl font-bold"><a href="about.html">ABOUT</a></li>
-          <li class="text-5xl font-bold"><a href="projects.html">PROJECTS</a></li>
-          <li class="text-5xl font-bold"><a href="contact.html">CONTACT</a></li>
+        <ul tabindex="0"
+          class="menu menu-sm dropdown-content z-10 mt-3 w-52 p-2 shadow bg-base-200 rounded-xl">
+        <li><a class="text-3xl sm:text-4xl font-bold" href="index.html">HOME</a></li>
+        <li><a class="text-3xl sm:text-4xl font-bold" href="about.html">ABOUT</a></li>
+        <li><a class="text-3xl sm:text-4xl font-bold" href="projects.html">PROJECTS</a></li>
+        <li><a class="text-3xl sm:text-4xl font-bold" href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <a class="btn btn-ghost text-4xl font-bold theme-color">HORIZON</a>
