--- a/homepage.html
+++ b/homepage.html
@@ -1,36 +1,29 @@
 <div class="w-full p-6 mb-10">
-  <!-- <div class="items-center text-center flex flex-col justify-center h-full"> -->
-    <!-- Light theme image (lofi) -->
-    <!-- <img
-      <!-- src="./images/hero.png"
-      alt="Hero image for light theme"
-      class="w-full h-auto mb-3 pb-10 block"
-      data-theme-visible="lofi"
-    /> --> 
   
-    <!-- Dark theme image (black) -->
-    <!-- <img
-      src="./images/hero_dark.png"
-      alt="Hero image for dark theme"
-      class="w-full h-auto mb-3 pb-10 hidden"
-      data-theme-visible="black"
-    />
-  </div> -->
-  <!-- banner + intro -->
-  <div class="max-w-2xl mx-auto">
-    <h1 class="text-5xl main-heading font-bold text-center mb-2 font-heading">HORIZON</h1>
-    <h2 class="text-4xl text-center mb-2 font-heading">Web Development</h2>
-    <h2 class="text-2xl mb-2 mt-2 text-center">
-      We specialize in building innovative web solutions, from subscription-based 
-      text-to-speech apps to advanced 3D rendering platforms. Whether you need a 
-      restaurant menu management system, REST API integrations, or data 
-      visualization tools, our team is here to help.
-    </h2>
+  <div class="flex flex-col-reverse lg:flex-row items-center max-w-4xl mx-auto gap-10">
+    
+    <!-- LEFT: Banner + Intro -->
+    <div class="w-full lg:w-1/2 text-center ">
+      <h1 class="text-4xl main-heading font-bold mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">HORIZON</h1>
+      <h2 class="text-4xl mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">Web Development</h2>
+      <h2 class="text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+        We specialize in building innovative web solutions, from subscription-based 
+        text-to-speech apps to advanced 3D rendering platforms. Whether you need a 
+        restaurant menu management system, REST API integrations, or data 
+        visualization tools, our team is here to help.
+      </h2>
+    </div>
+
+    <!-- RIGHT: Image -->
+    <div class="w-full lg:w-1/2 flex justify-center ">
+      <img src="./images/hero3.png" alt="Hero Illustration" class="w-full max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
+    </div>
+
   </div>
 
 <div class=" w-full p-6 mb-10">
   <!-- services -->
-  <div class="w-full max-w-5xl mt-12 flex flex-col items-center mx-auto">
+  <div class="w-full max-w-5xl mt-12 flex flex-col items-center mx-auto animate-fade animate-duration-[2000ms] animate-ease-in">
     <h2 class="text-3xl font-bold mb-8">Services We Offer</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full items-stretch">
       <div class="bg-base-100 card shadow-md h-full flex flex-col">
