--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horizon – Home</title>
+  <link rel="icon" type="image/x-icon" href="./images/FAVICON.png">
   <link href="./dist/output.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/39c7bbdf94.js" crossorigin="anonymous"></script>
@@ -14,7 +15,7 @@
 </head>
 <body class="min-h-screen flex flex-col">
   <!-- navbar -->
-  <div class="navbar bg-base-200">
+  <div class="navbar bg-base-100">
     <div class="navbar-start">
       <div class="dropdown bg-base-200">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -79,9 +80,10 @@
   <main id="homepage-content" class="flex-grow p-5 md:p-10"></main>
 
   <!-- footer -->
-  <footer class=" py-4 text-center">
-    <p class="text-sm">© 2025 Horizon. All rights reserved.</p>
+  <footer class="py-4 text-center">
+    <h2 class="text-lg">© 2025 Horizon. All rights reserved.</h2>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/theme.js"></script>
