--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Horizon</title>
+  <link rel="icon" type="image/x-icon" href="./images/FAVICON.png">
   <link href="./dist/output.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" />
@@ -15,7 +16,7 @@
 </head>
 <body class="min-h-screen flex flex-col">
 <!-- navbar -->
-  <div class="navbar bg-base-200">
+  <div class="navbar bg-base-100">
     <div class="navbar-start">
       <div class="dropdown bg-base-200">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -263,9 +264,10 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-base-200 py-4 text-center">
-    <p class="text-sm">&copy; 2025 Horizon. All rights reserved.</p>
+  <footer class="py-4 text-center">
+    <h2 class="text-lg">© 2025 Horizon. All rights reserved.</h2>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/theme.js"></script>
