--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <script src="https://kit.fontawesome.com/39c7bbdf94.js" crossorigin="anonymous"></script>
 </head>
 <body class="min-h-screen flex flex-col">
-  <div class="navbar bg-base-200">
+  <div class="navbar bg-base-100">
     <div class="navbar-start">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -84,7 +84,7 @@
     <!-- 2 columns on md and up, 1 column on mobile -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center p-10">
       <!-- Dubravka -->
-      <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[400px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+      <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
         <figure class="w-full md:w-1/2 h-full">
           <img src="./images/dubravka.jpeg" alt="Dubravka Spoljaric" class="object-cover w-full h-full rounded-md" />
         </figure>
@@ -104,8 +104,8 @@
       </div>
 
      <!-- Karla -->
-        <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[400px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
-          <figure class="w-full md:w-1/2 h-full">
+     <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+      <figure class="w-full md:w-1/2 h-full">
             <img src="./images/karla.jpg" alt="Karla Lenard" class="object-cover w-full h-full rounded-md" />
           </figure>
           <div class="flex flex-col w-full md:w-1/2 h-full px-4 justify-between text-center md:text-left">
@@ -125,11 +125,11 @@
       </div>
 
       <h1 class="text-4xl font-bold text-center mb-10 mt-10">Extended team:</h1>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center p-10">
       <!-- Ivona -->
-          <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[400px] lg:h-60 overflow-hidden p-4 animate-fade-right animate-once animate-duration-1000">
-            <figure class="w-full md:w-1/2 h-full">
-              <img src="./images/ivona.jpg" alt="Ivona Lenard" class="object-cover w-full h-full rounded-md" />
+      <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+        <figure class="w-full md:w-1/2 h-full">
+        <img src="./images/ivona.jpg" alt="Ivona Lenard" class="object-cover w-full h-full rounded-md" />
             </figure>
             <div class="flex flex-col w-full md:w-1/2 h-full px-4 justify-between text-center md:text-left">
               <div>
@@ -146,8 +146,8 @@
           </div>
 
         <!-- Mia -->
-      <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[400px] lg:h-60 overflow-hidden p-4 animate-fade-right animate-once animate-duration-1000">
-        <figure class="w-full md:w-1/2 h-full">
+        <div class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+          <figure class="w-full md:w-1/2 h-full">
           <img src="./images/mia.jpeg" alt="Mia Majstor" class="object-cover w-full h-full rounded-md" />
         </figure>
         <div class="flex flex-col w-full md:w-1/2 h-full px-4 justify-between text-center md:text-left">
@@ -168,9 +168,10 @@
   </main>
 
   <!-- Footer  -->
-  <footer class="bg-base-200 py-4 text-center">
-    <p class="text-sm">&copy; 2025 Horizon. All rights reserved.</p>
+  <footer class="py-4 text-center">
+    <h2 class="text-lg">© 2025 Horizon. All rights reserved.</h2>
   </footer>
+
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
