--- a/homepage.html
+++ b/homepage.html
@@ -1,24 +1,33 @@
 <div class="w-full p-6 mb-10">
   
   <div class="flex flex-col-reverse lg:flex-row items-center max-w-4xl mx-auto gap-10">
-    
+  
     <!-- LEFT: Banner + Intro -->
-    <div class="w-full lg:w-1/2 text-center ">
-      <h1 class="text-4xl main-heading font-bold mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">HORIZON</h1>
-      <h2 class="text-4xl mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">Web Development</h2>
-      <h2 class="text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+    <div class="w-full lg:w-1/2 text-center">
+      <!-- On mobile: text-2xl, on md+: text-4xl -->
+      <h1 class="text-2xl md:text-4xl main-heading font-bold mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+        HORIZON
+      </h1>
+      <!-- On mobile: text-xl, on md+: text-4xl -->
+      <h2 class="text-xl md:text-4xl mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+        Web Development
+      </h2>
+      <!-- On mobile: text-base, on md+: text-xl -->
+      <h2 class="text-base md:text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
         We specialize in building innovative web solutions, from subscription-based 
         text-to-speech apps to advanced 3D rendering platforms. Whether you need a 
         restaurant menu management system, REST API integrations, or data 
         visualization tools, our team is here to help.
       </h2>
     </div>
-
+  
     <!-- RIGHT: Image -->
-    <div class="w-full lg:w-1/2 flex justify-center ">
-      <img src="./images/hero3.png" alt="Hero Illustration" class="w-full max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
+    <div class="w-full lg:w-1/2 flex justify-center">
+      <!-- On mobile: max width xs, on md+: max width sm -->
+      <img src="./images/hero3.png" alt="Hero Illustration"
+      class="w-full max-w-[150px] md:max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
     </div>
-
+  
   </div>
 
 <div class=" w-full p-6 mb-10">
